plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.7'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'com.idea5'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    //db
//    implementation "com.h2database:h2"
    implementation 'com.mysql:mysql-connector-j:8.0.33'

    // lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    // test lombok
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    // spring security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.security:spring-security-test'

    // jwt
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // apache httpclient
    implementation 'org.apache.httpcomponents:httpclient:4.5.9'

    //유효성 검증
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // redis 캐시 사용
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // jackson
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.4'

    // https://mvnrepository.com/artifact/com.google.guava/guava, CaseFormat 사용
    implementation group: 'com.google.guava', name: 'guava', version: 'r05'

    // https://mvnrepository.com/artifact/org.awaitility/awaitility
    testImplementation group: 'org.awaitility', name: 'awaitility', version: '4.2.0'

    // web client
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // jsoup
    implementation 'org.jsoup:jsoup:1.15.3'

    // 암호화
    implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.3'

    // aws 파일 업로드
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.241'

    // 이미지 리사이징 을 위한 라이브러리
    implementation group: 'org.imgscalr', name: 'imgscalr-lib', version: '4.2'
    implementation 'com.github.downgoon:marvin:1.5.5'
    implementation 'com.github.downgoon:MarvinPlugins:1.5.5'
    implementation 'org.springframework:spring-test:5.3.24'
//    compile group: 'org.springframework', name: 'spring-test'
}

tasks.named('test') {
    useJUnitPlatform()
}
